# axion

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  explorer.html  genesis_block.json
crates/axion-core/: Cargo.toml
crates/axion-core/src/: lib.rs
crates/axion-crypto/: Cargo.toml
crates/axion-crypto/src/: lib.rs
crates/axion-net/: Cargo.toml
crates/axion-net/src/: lib.rs
src/: main.rs
