[package]
name = "axion-node"
version = "1.1.0"
edition = "2021"
authors = ["Axion Research Labs"]

[[bin]]
name = "axion"
path = "src/main.rs"

[workspace]
members = [ "crates/axion-core", "crates/axion-crypto", "crates/axion-net" ]
resolver = "2"

[workspace.dependencies]
# Internal Workspace Crates
axion-core = { path = "crates/axion-core" }
axion-crypto = { path = "crates/axion-crypto" }
axion-net = { path = "crates/axion-net" }

# CLI & Config
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

# Async & Runtime
tokio = { version = "1.36", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
futures = "0.3"

# Error Handling & Utils
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"

# Storage
sled = "0.34"

# Cryptography (The Quantum Suite)
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3.5"
sha3 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Networking
libp2p = { version = "0.53.2", features = [
    "tcp",
    "dns",
    "tokio",
    "gossipsub",
    "noise",
    "yamux",
    "mdns",
    "macros",
    "kad",
    "identify",
    "request-response",
    "cbor"
] }

[dependencies]
axion-core = { workspace = true }
axion-crypto = { workspace = true }
axion-net = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sled = { workspace = true }
warp = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
libp2p = { workspace = true }