[package]
name = "axion-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit versions from the root workspace
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
hex = "0.4"

# PQC Libraries
pqcrypto-dilithium = { workspace = true }
pqcrypto-falcon = { workspace = true }
pqcrypto-traits = { workspace = true }