[package]
name = "axion-crypto"
version = "1.0.0"
edition = "2021"

[dependencies]
# Inherit core utilities from the root workspace
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

# PQC Libraries (Inherited from root Cargo.toml)
pqcrypto-dilithium = { workspace = true }
pqcrypto-falcon = { workspace = true }
pqcrypto-kyber = { workspace = true }
pqcrypto-traits = { workspace = true }

# Symmetric Encryption for Hybrid PQC
aes-gcm = { workspace = true }