[package]
name = "axion-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, features = ["tcp", "dns", "tokio", "gossipsub", "noise", "yamux", "mdns", "macros"] }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
axion-core = { path = "../axion-core" }