[package]
name = "axion-net"
version = "1.1.0"
edition = "2021"

[dependencies]
axion-core = { workspace = true }
libp2p = { workspace = true, features = [
    "tcp",
    "dns",
    "tokio",
    "gossipsub",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "request-response",
    "cbor",
    "macros"
] }
tokio = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }